--- a/styles.less
+++ b/styles.less
@@ -10,7 +10,7 @@ body {
 
 .image {
   float: left;
-  width: 250px;
+  width: 300px;
   height: 250px;
   clear: both;
   margin-right: 10px;
@@ -18,18 +18,37 @@ body {
 
 .title {
   font-weight: bold;
-  padding: 10px;
-}
-
-.data {
-  align-self: top;
-}
-
-.column{
-  vertical-align: top;
-  padding: 0px;
+  padding-bottom: 10px;
 }
 
 .url {
   display: block;
+}
+
+.description {
+  color: #7594a5;
+  padding: 40px 0px 60px 0px;
+}
+
+.author {
+  padding-left: 10px;
+  font-size: 10px;
+}
+
+.top{
+  vertical-align: top;
+  position: absolute;
+  top: 0;
+}
+
+.bottom {
+  vertical-align: bottom;
+  position: absolute;
+  bottom: 0;
+}
+
+.data {
+  padding: 0px;
+  position: relative;
+  width: 100%;
 }
